# rag-reliability-harness

./: .env.example  .gitignore  LINKEDIN_DRAFT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: eval.yml
data/: ATTRIBUTION.md
data/corpus/fastapi/: background_tasks.md  connection_limits.md  cors.md  dependencies.md  middleware.md  path_parameters.md  routing.md  security.md  settings.md
data/corpus/mutable/v1/: config.md
data/corpus/mutable/v2/: config.md
data/golden/: set.jsonl
data/online/: traffic_sample.jsonl
docs/superpowers/plans/: 2026-07-15-atdd-retrofit.md  2026-07-15-rag-reliability-harness.md
docs/superpowers/specs/: 2026-07-15-rag-reliability-harness-design.md
eval/: __init__.py  __main__.py  metrics.py  runner.py  simulate_regressions.py  thresholds.yaml
eval/baselines/: ci.json
gates/: __init__.py  __main__.py  run.py
ingest/: __init__.py  __main__.py  chunker.py  fingerprint.py  pipeline.py
loop/: __init__.py  __main__.py  alert.py  ownership.py  run.py
observability/: __init__.py  tracing.py
rag_harness/: __init__.py  types.py
rag_harness/embeddings/: __init__.py  hash_embedder.py
rag_harness/store/: __init__.py  memory.py  pgvector.py  protocol.py
retrieval/: __init__.py  cache.py  generate.py  retriever.py  rewrite.py
tests/: test_acceptance.py  test_embeddings.py  test_gate.py  test_generate.py  test_ingest.py  test_loop_acceptance.py  test_metrics.py  test_retrieval.py  test_simulate.py  test_store.py  test_tracing.py  test_types.py
tests/fixtures/corpus/fastapi/: routing.md
(+1 files in other folders)
