[project]
name = "rag-reliability-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "langchain-core>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
pgvector = ["psycopg[binary]>=3.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rag_harness*", "ingest*", "retrieval*", "eval*", "gates*", "observability*", "loop*"]
